[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/units/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/shaders/flash.gdshader" type="Shader" id=2]
[ext_resource path="res://entities/units/enemies/007/7.png" type="Texture" id=3]
[ext_resource path="res://entities/units/enemies/005/sci-fi_code_fail_13.wav" type="AudioStream" id=4]
[ext_resource path="res://entities/units/enemies/007/7.gd" type="Script" id=5]
[ext_resource path="res://entities/units/enemies/007/7_stats.tres" type="Resource" id=6]
[ext_resource path="res://entities/units/movement_behaviors/stay_in_range_from_player_movement_behavior.gd" type="Script" id=7]
[ext_resource path="res://entities/units/enemies/attack_behaviors/enemy_shoot_animation.tres" type="Animation" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 8.544

[sub_resource type="CircleShape2D" id=6]
radius = 22.0

[sub_resource type="CircleShape2D" id=5]
radius = 309.04

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 5 )
stats = ExtResource( 6 )
can_be_boosted = false
boost_sound = ExtResource( 4 )
hp_boost = 1.5
damage_boost = 0.25
speed_boost = 0.5

[node name="Sprite" parent="Animation" index="0"]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="Collision" parent="." index="1"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="Collision" parent="Hitbox" index="0"]
position = Vector2( 1, -3 )
shape = SubResource( 6 )

[node name="AnimationPlayer" parent="." index="4"]
anims/shoot = ExtResource( 8 )

[node name="MovementBehavior" parent="." index="6"]
script = ExtResource( 7 )
target_range = 500
target_range_randomization = 100

[node name="BoostZone" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoostZone" index="0"]
position = Vector2( -8, 0 )
shape = SubResource( 5 )

[node name="BoostTimer" type="Timer" parent="." index="9"]
wait_time = 0.25
autostart = true

[connection signal="body_entered" from="BoostZone" to="." method="_on_BoostZone_body_entered"]
[connection signal="body_exited" from="BoostZone" to="." method="_on_BoostZone_body_exited"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
